Mise en page des chapeaux de SAE

--- a/latex/macros_formations.sty
+++ b/latex/macros_formations.sty
@@ -253,6 +253,8 @@
 
 	\expandafter\xdef\csname ESsae\currentESsae\endcsname{\csname Sname\currentSsae\endcsname} % nom de la SAE
 	\expandafter\xdef\csname ESname\currentESsae\endcsname{#1} % nom/intitule
+	\expandafter\xdef\csname EScode\currentESsae\endcsname{\csname Scode\currentSsae\endcsname} % nom de la SAE
+
 	% \expandafter\xdef\csname ESsem\currentESsae\endcsname{\csname semestrenumero\currentsemestre\endcsname} % nom du semestre
 }
 
