--- a/latex/modeles/tableau_exemple.tex
+++ b/latex/modeles/tableau_exemple.tex
@@ -14,11 +14,13 @@
 % 3ème tableau : descriptif
 \begin{tabular}[t]{|P|T|}
 \hline
-	{\bfseries Exemple de la SAÉ} &
-		{\csname ESsae\EXEMPLE\endcsname} \\
-\hline
 	{\bfseries Titre} &
-		{\csname ESname\EXEMPLE\endcsname} \\
+		{\bfseries \csname ESname\EXEMPLE\endcsname} \\
+\hline
+
+	{\bfseries Exemple de la {\csname EScode\EXEMPLE\endcsname}} &
+		{\csname ESsae\EXEMPLE\endcsname} \\
+
 \hline
 	{\bfseries Description} &
 	\tableauChampLong{\csname ESdescription\EXEMPLE\endcsname} \\
