--- a/latex/saes/SAE12.tex
+++ b/latex/saes/SAE12.tex
@@ -47,6 +47,7 @@ stable.
 
 % Livrable
 \ajoutSlivrables{
+\vspace{-5pt}
 \begin{itemize}
 \item
   Schéma réseau annoté avec le plan d'adressage et les services;
