--- a/latex/saes/SAE14.tex
+++ b/latex/saes/SAE14.tex
@@ -47,6 +47,7 @@ en mesurant l'importance et la portée des contenus qu'il diffuse
 
 % Livrable
 \ajoutSlivrables{
+\vspace{-5pt}
 \begin{itemize}
 \item
   dossier ou rapport d'étude
