--- a/latex/saes/SAE22.tex
+++ b/latex/saes/SAE22.tex
@@ -41,6 +41,7 @@ présenter sous forme d'un bilan à un client ou un collaborateur.
 
 % Livrable
 \ajoutSlivrables{
+\vspace{-5pt}
 \begin{itemize}
 \item
   Rapport écrit
