--- a/latex/saes/SAE23.tex
+++ b/latex/saes/SAE23.tex
@@ -55,6 +55,7 @@ informatique pour le compte de son entreprise.
 
 % Livrable
 \ajoutSlivrables{
+\vspace{-5pt}
 \begin{itemize}
 \item
   Codes informatiques du site Web fonctionnel et dynamique
