Ajout des version0 des ressources & des saé

--- a/latex/saes/SAE23.tex
+++ b/latex/saes/SAE23.tex
@@ -33,14 +33,14 @@ informatiques : ces solutions peuvent faciliter son travail quotidien
 (outil pour centraliser les données d'administration de son réseau) ou
 être commandé pour les besoins de ses collaborateurs (annuaire des
 personnels, partage d'informations, \ldots). Ces solutions sont plus
-larges que le simple traitement des données (abordé au semestre 1) et
-visent le développement d'un outil informatique complet partant d'un
-cahier des charges donnés : elles incluent la gestion de données
-structurées (base de données, fichiers de données), leur traitement et
-les éléments d'interaction utilisateur via une interface conviviale et
-pratique. Elles peuvent être documentées grâce à des pages Web voire
-mises à disposition des utilisateurs directement dans leur simple
-navigateur Web.
+larges que le simple traitement des données (abordé au semestre
+\textgreater{} et visent le développement d'un outil informatique
+complet partant d'un cahier des charges donnés : elles incluent la
+gestion de données structurées (base de données, fichiers de données),
+leur traitement et les éléments d'interaction utilisateur via une
+interface conviviale et pratique. Elles peuvent être documentées grâce à
+des pages Web voire mises à disposition des utilisateurs directement
+dans leur simple navigateur Web.
 Le professionnel R\&T doit donc mobiliser son expertise en développement
 informatique pour le compte de son entreprise.
 }
@@ -74,4 +74,4 @@ informatique pour le compte de son entreprise.
 }
 
 % Mots-clés
-\ajoutSmotscles{Algorithmique, programmation, développement web, documentation technique}
+\ajoutSmotscles{Algorithmique,  programmation,  développement web,  documentation technique}
