Corrige les pb de tabulation dans les listes à puces markdown au moment de l'export du yaml => remplace les \t par des espaces

--- a/latex/pn_formation.tex
+++ b/latex/pn_formation.tex
@@ -124,6 +124,14 @@
 \section{Semestre 2}
 \def\sem{B} % Le semestre 2
 
+\subsection{SAÉs du semestre 2}
+
+\listeTitreSAE{\sem}
+
+\subsection{Ressources du semestre 2}
+
+\listeTitreRessource{\sem}
+
 \newpage
 
 % Les SAE du semestre 2 + les exemples
