--- a/latex/referentiel_BUT1.tex
+++ b/latex/referentiel_BUT1.tex
@@ -63,7 +63,7 @@
 
 \input{saes/SAE23.tex}
 \input{saes/SAE23_exemple1.tex}
-%\input{saes/SAE23_exemple2.tex}
+\input{saes/SAE23_exemple2.tex}
 
 
 \input{ressources/R201.tex}
