--- a/latex/saes/SAE21.tex
+++ b/latex/saes/SAE21.tex
@@ -51,8 +51,9 @@ fonctionnel et structuré.
   Maquette du projet
 \item
   Dossier ou rapport décrivant l'architecture physique, les vlan,
-  l'adressage IP, les principaux points de vérification du projet, des
-  captures de trafic et différents scénarios permettant de valider les
+  l'adressage IP, les principaux points
+  de vérification du projet, des captures de trafic et différents
+  scénarios permettant de valider les
   contraintes du cahier des charges (scénarios de routage, d'accès aux
   ressources publiques de l'entreprise\ldots)
 \item
