--- a/latex/saes/SAE23.tex
+++ b/latex/saes/SAE23.tex
@@ -61,7 +61,8 @@ informatique pour le compte de son entreprise.
   Codes informatiques du site Web fonctionnel et dynamique
 \item
   Documentation technique, informative présentant la méthode de
-  validation (exemple : cahier de tests, tests unitaires)
+  validation (exemple : cahier de tests,
+  tests unitaires)
 \item
   Tutoriel d'installation et d'utilisation
 \item
