--- a/latex/ressources/R101.tex
+++ b/latex/ressources/R101.tex
@@ -34,16 +34,17 @@ l'Internet'' (RT1) et ``Connecter les entreprises et les usagers''
 (RT2). Elle contribue aussi à la compétence ``Créer des outils et
 applications informatiques pour les R\&T'' (RT3) à travers la découverte
 du poste client et de son environnement logiciel.
-Elle permet à l'étudiant de découvrir et déployer un premier
+Cette ressource permet à l'étudiant de découvrir et déployer un premier
 système d'information au sein d'une entreprise. À travers des exercices
 de mise en place progressive de réseaux locaux, d'interconnection
 d'équipements et de prise en main des fonctions de base des systèmes
 d'exploitation, l'étudiant découvrira les principaux concepts utilisés
 dans les réseaux informatiques, et commencera à comprendre le rôle et
-les principes des normes et protocoles essentiels,
+les principes des normes et protocoles essentiels des réseaux locaux,
 comme Ethernet, TCP/IP, DHCP, DNS.
-On introduira des notions de sécurité informatique (en s'appuyant sur les
-  recommandations de l'ANSSI, CyberEdu, CyberMalveillance).}
+On introduira des notions de sécurité informatique (les ressources
+associées aux recommandations de l'ANSSI, CyberEdu, CyberMalveillance
+pourront servir de support).}
 
 % Contenus
 \ajoutRcontenudetaille{
@@ -77,13 +78,11 @@ On introduira des notions de sécurité informatique (en s'appuyant sur les
 \item
   Architecture client-serveur dans un réseau local
   \begin{itemize}
-    \item
+  \item
     Mise en place d'une architecture client/serveur simple (serveur
     d'authentification/de fichiers et
+    postes clients associés)
   \end{itemize}
-\end{itemize}
-postes clients associés)
-\begin{itemize}
 \item
   Introduction à la sécurité informatique
 \end{itemize}
