--- a/latex/ressources/R104.tex
+++ b/latex/ressources/R104.tex
@@ -47,7 +47,8 @@ instruments de mesure et d'interpréter les résultats.}
   Lois de base de l'électricité, théorèmes fondamentaux, pont diviseur
 \item
   Résistance et Condensateur. Savoir réaliser un circuit simple et
-  savoir brancher les appareils de mesure sur platine d'expérimentation
+  savoir brancher les appareils de
+  mesure sur platine d'expérimentation
 \item
   Mesure de signaux avec calculs simples (voltmètre, tension moyenne,
   efficace\ldots)
@@ -59,11 +60,13 @@ instruments de mesure et d'interpréter les résultats.}
   le calcul de la puissance maximale.
 \item
   Dimensionnement des puissances d'une installation télécom ou réseau.
-  Sensibilisation à la sécurité électrique et au Développement Durable.
-  Coût de fonctionnement des équipements.
+  Sensibilisation à la sécurité
+  électrique et au Développement Durable. Coût de fonctionnement des
+  équipements.
 \item
   Exemples : dimensionnement d'une alimentation pour des serveurs,
-  limite de puissance sur un câble (alternatif ou continu).
+  limite de puissance sur un câble
+  (alternatif ou continu).
 \end{itemize}
 }
 
