--- a/latex/ressources/R105.tex
+++ b/latex/ressources/R105.tex
@@ -2,7 +2,7 @@
 % Ressources
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\nouvelleressource{R105}{Supports de transmission pour les réseaux}
+\nouvelleressource{R105}{Supports de transmission pour les réseaux locaux}
 
 \ajoutRheures{12}{6}
 
@@ -41,13 +41,14 @@ transmission.}
   opérateur)
 \item
   Caractéristiques d'un ou plusieurs types de supports (exemples: retard
-  de propagation, atténuation, continuité, échos, bruit, perturbations,
-  identifier un défaut, bande passante,\ldots{} ) à partir de mesures et
-  d'analyse des signaux
+  de propagation, atténuation,
+  continuité, échos, bruit, perturbations, identifier un défaut, bande
+  passante,\ldots{} ) à partir de mesures
+  et d'analyse des signaux
 \item
   Prolongement possible : recettage, certification LAN.
 \end{itemize}
 }
 
 % Mots-clés
-\ajoutRmotscles{Supports de transmission (fibre optique, cuivre, radio), mesures }
+\ajoutRmotscles{Supports de transmission (fibre optique, cuivre, radio), mesures}
