--- a/latex/ressources/R108.tex
+++ b/latex/ressources/R108.tex
@@ -28,11 +28,12 @@
 
 % Le descriptif
 \ajoutRancrage{Cette ressource traite des bases de l'utilisation d'un poste client et
-de son système d'exploitation. Elle est essentielle pour la prise en
-main pratique d'un système informatique en abordant notamment la gestion
-des données dans un espace de stockage (organisation, recherche, droits)
-et la maîtrise d'un environnement numérique, deux thèmes attendus par le
-référentiel PIX (https://pix.fr/competences).
+de son système d'exploitation.
+Elle est essentielle pour la prise en main pratique d'un système
+informatique en abordant notamment la gestion des données dans un espace
+de stockage (organisation, recherche, droits) et la maîtrise d'un
+environnement numérique, deux thèmes attendus par le référentiel PIX
+(https://pix.fr/competences).
 Cette ressource introduit également un usage avancé du système
 d'exploitation nécessaire au besoin d'un professionnel R\&T. Elle vise
 la maîtrise de commandes en ligne pour gérer l'arborescence de fichiers,
