--- a/latex/ressources/R109.tex
+++ b/latex/ressources/R109.tex
@@ -48,7 +48,8 @@ navigateur Web.}
   Structure d'un site Web : client-serveur, arborescence, URL
 \item
   Structure d'une page : langage à balise, mise en forme et feuilles de
-  styles (notions élémentaires de CSS), notions de responsive design
+  styles (notions élémentaires
+  de CSS), notions de responsive design
 \item
   Contenu d'une page : éléments multimédia, encodage des caractères
 \item
