--- a/latex/ressources/R110.tex
+++ b/latex/ressources/R110.tex
@@ -23,6 +23,7 @@
 \ajoutRsae{SAÉ12}{S'initier aux réseaux informatiques}
 \ajoutRsae{SAÉ13}{Découvrir un dispositif de transmission}
 \ajoutRsae{SAÉ14}{Se présenter sur Internet}
+\ajoutRsae{SAÉ15}{Traiter des données}
 
 % Les pre-requis
 
