--- a/latex/ressources/R111.tex
+++ b/latex/ressources/R111.tex
@@ -2,7 +2,7 @@
 % Ressources
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\nouvelleressource{R111}{Expression-Culture-Communication Professionnelles (ECC1)}
+\nouvelleressource{R111}{Expression-Culture-Communication Professionnelles 1}
 
 \ajoutRheures{30}{21}
 
@@ -23,6 +23,7 @@
 \ajoutRsae{SAÉ12}{S'initier aux réseaux informatiques}
 \ajoutRsae{SAÉ13}{Découvrir un dispositif de transmission}
 \ajoutRsae{SAÉ14}{Se présenter sur Internet}
+\ajoutRsae{SAÉ15}{Traiter des données}
 
 % Les pre-requis
 
@@ -47,8 +48,8 @@ l'importance des savoir-être et aux enjeux du développement durable.}
   Analyser et restituer des informations
 \item
   Produire des écrits courts, clairs, structurés, adaptés et répondant
-  aux normes de présentation professionnelle et académique (mail,
-  argumentation courte\ldots)
+  aux normes de présentation professionnelle
+  et académique (mail, argumentation courte\ldots)
 \item
   Réécrire et corriger ses documents
 \item
@@ -68,8 +69,8 @@ l'importance des savoir-être et aux enjeux du développement durable.}
   Décrire et analyser l'image fixe et mobile
 \item
   Adopter des savoir-être professionnels essentiels dans le travail en
-  équipe (écoute, reformulation, transmission des informations,
-  explications\ldots)
+  équipe (écoute, reformulation,
+  transmission des informations, explications\ldots)
 \item
   S'initier aux objectifs du développement durable
 \item
