--- a/latex/ressources/R113.tex
+++ b/latex/ressources/R113.tex
@@ -22,6 +22,7 @@
 % Les SAE
 \ajoutRsae{SAÉ13}{Découvrir un dispositif de transmission}
 \ajoutRsae{SAÉ22}{Mesurer et caractériser un signal ou un système}
+\ajoutRsae{SAÉ24}{Projet intégratif de S2}
 
 % Les pre-requis
 
@@ -41,7 +42,7 @@ télécommunications.}
 \item
   Introduction aux signaux
   \begin{itemize}
-    \item
+  \item
     graphe d'un signal
   \item
     symétries : parité, imparité, \ldots{}
@@ -52,16 +53,14 @@ télécommunications.}
   \item
     fonction définie par morceaux (ex. : valeur absolue)
   \item
-    signaux de base : (ex. : porte, triangle, échelon, rampe\ldots)
+    signaux de base (ex. : porte, triangle, échelon, rampe\ldots)
   \item
     opérations sur les signaux : avance, retard, dilatation,
     amplification, offset (interprétation géométrique
+    sur le graphe), somme de signaux Cette partie sera l'occasion de
+    réviser les règles de calculs de base par l'intermédiaire du calcul
+    d'images et d'antécédents.
   \end{itemize}
-\end{itemize}
-sur le graphe), somme de signaux
-Cette partie sera l'occasion de réviser les règles de calculs de base
-par l'intermédiaire du calcul d'images et d'antécédents.
-\begin{itemize}
 \item
   Éléments de trigonométrie
   \begin{itemize}
@@ -70,7 +69,8 @@ par l'intermédiaire du calcul d'images et d'antécédents.
   \item
     cercle trigonométrique
   \item
-    formules , , , et et idem avec sinus
+    formules \(\cos(-x)\), \(\cos(\pi\pm x)\) et
+    \(\cos(\frac{\pi}{2}\pm x)\) ; les même avec sinus
   \item
     angles remarquables
   \end{itemize}
@@ -88,7 +88,7 @@ par l'intermédiaire du calcul d'images et d'antécédents.
   \item
     graphe des signaux avancés, retardés, dilatés\ldots{}
   \item
-    graphe de ,
+    graphe de \(A\cos(\omega t + \phi)\), \(A\cos(\omega t + \phi)\)
   \end{itemize}
 \end{itemize}
 }
