--- a/latex/ressources/R114.tex
+++ b/latex/ressources/R114.tex
@@ -22,9 +22,10 @@
 % Les SAE
 \ajoutRsae{SAÉ13}{Découvrir un dispositif de transmission}
 \ajoutRsae{SAÉ22}{Mesurer et caractériser un signal ou un système}
+\ajoutRsae{SAÉ24}{Projet intégratif de S2}
 
 % Les pre-requis
-
+\ajoutRprerequis{R113}{Mathématiques du signal}
 
 % Le descriptif
 \ajoutRancrage{Les systèmes de transmission font intervenir des fonctions sinusoïdales
