--- a/latex/ressources/R115.tex
+++ b/latex/ressources/R115.tex
@@ -23,6 +23,7 @@
 \ajoutRsae{SAÉ12}{S'initier aux réseaux informatiques}
 \ajoutRsae{SAÉ13}{Découvrir un dispositif de transmission}
 \ajoutRsae{SAÉ14}{Se présenter sur Internet}
+\ajoutRsae{SAÉ15}{Traiter des données}
 
 % Les pre-requis
 
@@ -38,16 +39,14 @@ Dans le cadre de cette ressource transversale, l'étudiant devra :
 \item
   Partager de façon collective l'information :
   \begin{itemize}
-    \item
+  \item
     Utilisation avancée du mail : création d'une adresse générique,
     utilisation du CC et du CCI .
   \item
     Utilisation d'outils collaboratifs adaptés (par exemple Mattermost,
     Slack, MSTeams, Google Drive,
+    OnlyOffice)
   \end{itemize}
-\end{itemize}
-OnlyOffice)
-\begin{itemize}
 \item
   Organiser son travail et celui de l'équipe à partir d'outils de
   planification (Gantt, PERT)
@@ -56,13 +55,15 @@ OnlyOffice)
   d'une équipe projet
 \item
   Conceptualiser les étapes des tâches à réaliser à l'aide d'outils
-  adaptés (cartes mentales, infographies, etc.)
+  adaptés (cartes mentales, infographies,
+  etc.)
 \item
   Prendre conscience des délais et échéances dans un travail en mode
   projet
 \item
   Savoir s'adapter à des profils professionnels différents (manager,
-  collaborateur, client) qui interviennent dans un projet
+  collaborateur, client) qui interviennent
+  dans un projet
 \item
   Apprendre à faire un bilan régulier sur l'avancée d'un projet : points
   bloquants, solutions apportées
@@ -77,4 +78,4 @@ OnlyOffice)
 }
 
 % Mots-clés
-\ajoutRmotscles{Planification, partage d'informations, organisation, conceptualisation,  réunion}
+\ajoutRmotscles{Planification, partage d'informations, organisation, conceptualisation, réunion}
