--- a/latex/ressources/R201.tex
+++ b/latex/ressources/R201.tex
@@ -2,7 +2,7 @@
 % Ressources
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\nouvelleressource{R201}{Technologies de l’Internet}
+\nouvelleressource{R201}{Technologie de l'Internet}
 
 \ajoutRheures{60}{30}
 
@@ -62,4 +62,4 @@ pourront servir de support)}
 }
 
 % Mots-clés
-\ajoutRmotscles{Plan d'adressage, routage état de lien, stratégies de filtrage,, CIDR, VLSM, agrégation de routes, IPv6, NDP}
+\ajoutRmotscles{Plan d'adressage, routage état de lien, stratégies de filtrage, , CIDR, VLSM, agrégation de routes, IPv6, NDP}
