--- a/latex/ressources/R203.tex
+++ b/latex/ressources/R203.tex
@@ -22,6 +22,7 @@
 
 % Les SAE
 \ajoutRsae{SAÉ21}{Construire un réseau informatique pour une petite structure}
+\ajoutRsae{SAÉ24}{Projet intégratif de S2}
 
 % Les pre-requis
 \ajoutRprerequis{R101}{Initiation aux réseaux informatiques}
