--- a/latex/ressources/R204.tex
+++ b/latex/ressources/R204.tex
@@ -50,11 +50,12 @@ téléphonique mixte (TDM/IP) ou TOIP.}
   Scénario d'un appel de base.
 \item
   Architectures des réseaux publics et privés (commutation,
-  signalisation, services, normes de câblage, PoE).
+  signalisation, services, normes de câblage,
+  PoE).
 \item
   Installation d'un système téléphonique d'entreprise
-  (insertion/raccordement de postes, connexion au réseau de
-  l'opérateur).
+  (insertion/raccordement de postes, connexion au
+  réseau de l'opérateur).
 \item
   Configuration d'un système téléphonique d'entreprise et de ses
   services associés.
