--- a/latex/ressources/R205.tex
+++ b/latex/ressources/R205.tex
@@ -23,6 +23,7 @@
 \ajoutRsae{SAÉ22}{Mesurer et caractériser un signal ou un système}
 
 % Les pre-requis
+\ajoutRprerequis{R104}{Fondamentaux des systèmes électroniques}
 \ajoutRprerequis{R113}{Mathématiques du signal}
 \ajoutRprerequis{R114}{Mathématiques des transmissions}
 
