--- a/latex/ressources/R206.tex
+++ b/latex/ressources/R206.tex
@@ -25,6 +25,7 @@
 % Les pre-requis
 \ajoutRprerequis{R113}{Mathématiques du signal}
 \ajoutRprerequis{R114}{Mathématiques des transmissions}
+\ajoutRprerequis{R205}{Signaux et Systèmes pour les transmissions}
 
 % Le descriptif
 \ajoutRancrage{Cette ressource apporte le socle de connaissances et savoir-faire pour
@@ -41,7 +42,8 @@ en téléphonie, ou en télécommunications numériques.}
 \begin{itemize}
 \item
   Comprendre la notion de signal numérique, et le principe de la
-  numérisation et de la restitution de signaux analogique
+  numérisation et de la restitution de
+  signaux analogique
 \item
   Échantillonnage des signaux : choix d'une fréquence adéquate
   d'échantillonnage
@@ -53,4 +55,4 @@ en téléphonie, ou en télécommunications numériques.}
 }
 
 % Mots-clés
-\ajoutRmotscles{Numérisation, échantillonnage, quantification, acquisition/restitution,CAN et CNA}
+\ajoutRmotscles{Numérisation, échantillonnage, quantification, acquisition/restitution, CAN et CNA}
