--- a/latex/ressources/R208.tex
+++ b/latex/ressources/R208.tex
@@ -27,7 +27,7 @@
 \ajoutRsae{SAÉ24}{Projet intégratif de S2}
 
 % Les pre-requis
-
+\ajoutRprerequis{R010}{None}
 
 % Le descriptif
 \ajoutRancrage{Le professionnel R\&T est amené à développer différents outils
