--- a/latex/ressources/R210.tex
+++ b/latex/ressources/R210.tex
@@ -26,7 +26,7 @@
 \ajoutRsae{SAÉ24}{Projet intégratif de S2}
 
 % Les pre-requis
-
+\ajoutRprerequis{R110}{Anglais de communication et initiation au vocabulaire technique}
 
 % Le descriptif
 \ajoutRancrage{}
@@ -37,7 +37,8 @@ Objectifs visés
 \begin{itemize}
 \item
   Savoir structurer son discours oral et écrit (courriel, conversation
-  téléphonique, visioconférence, réunion, débat)
+  téléphonique, visioconférence,
+  réunion, débat)
 \item
   Présenter son parcours professionnel à l'oral et à l'écrit (CV, lettre
   de motivation, entretien)
