--- a/latex/ressources/R211.tex
+++ b/latex/ressources/R211.tex
@@ -2,7 +2,7 @@
 % Ressources
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\nouvelleressource{R211}{Expression-Culture-Communication Professionnelles (ECC2)}
+\nouvelleressource{R211}{Expression-Culture-Communication Professionnelles 2}
 
 \ajoutRheures{30}{21}
 
@@ -22,9 +22,10 @@
 \ajoutRsae{SAÉ21}{Construire un réseau informatique pour une petite structure}
 \ajoutRsae{SAÉ22}{Mesurer et caractériser un signal ou un système}
 \ajoutRsae{SAÉ23}{Mettre en place une solution informatique pour l’entreprise}
+\ajoutRsae{SAÉ24}{Projet intégratif de S2}
 
 % Les pre-requis
-
+\ajoutRprerequis{R111}{Expression-Culture-Communication Professionnelles 1}
 
 % Le descriptif
 \ajoutRancrage{}
@@ -41,9 +42,10 @@
   S'initier au résumé
 \item
   Produire des écrits longs et clairs, structurés, adaptés au
-  destinataire et répondant aux normes de présentation professionnelle
-  et académique (dossier, présentation longue, exploitation de la mise
-  en forme pour alléger les contenus et guider la lecture\ldots)
+  destinataire et répondant aux normes de
+  présentation professionnelle et académique (dossier, présentation
+  longue, exploitation de la mise en
+  forme pour alléger les contenus et guider la lecture\ldots)
 \item
   Réécrire et corriger ses documents ;
 \item
@@ -66,8 +68,8 @@
   Produire un document audiovisuel court
 \item
   Adopter des savoir-être professionnels essentiels dans le travail en
-  équipe (coopération, prise en compte de l'opinion d'autrui,
-  adaptation, prise d'initiative\ldots)
+  équipe (coopération, prise en
+  compte de l'opinion d'autrui, adaptation, prise d'initiative\ldots)
 \item
   S'initier à la gestion de projet : argumenter, défendre son point de
   vue
