--- a/latex/ressources/R212.tex
+++ b/latex/ressources/R212.tex
@@ -22,7 +22,7 @@
 \ajoutRsae{SAÉ24}{Projet intégratif de S2}
 
 % Les pre-requis
-
+\ajoutRprerequis{R112}{Projet Personnel et Professionnel}
 
 % Le descriptif
 \ajoutRancrage{}
@@ -36,7 +36,8 @@
   se présenter, se définir;
 \item
   exprimer l'intérêt professionnel, valeurs, motivations, traits de
-  personnalité, expériences professionnelles ou personnelles;
+  personnalité, expériences professionnelles
+  ou personnelles;
 \item
   mettre en valeur et présenter son savoir-être;
 \item
