--- a/latex/saes/SAE11.tex
+++ b/latex/saes/SAE11.tex
@@ -2,7 +2,7 @@
 % SAE
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\nouvellesae{SAÉ11}{Sensibilisation à l'hygiène informatique et à la cybersécurité}
+\nouvellesae{SAÉ11}{Se sensibiliser à l'hygiène informatique et à la cybersécurité}
 
 \ajoutSheures{7}{5}{12}
 
@@ -48,4 +48,4 @@ destination des proches ou de la famille de l'étudiant.
 }
 
 % Mots-clés
-\ajoutSmotscles{Sécurité numérique,  utilisation d'internet}
+\ajoutSmotscles{Sécurité numérique, utilisation d'internet}
