--- a/latex/saes/SAE13.tex
+++ b/latex/saes/SAE13.tex
@@ -41,7 +41,7 @@ un collaborateur.
 
 % Livrable
 \ajoutSlivrables{
-L'évaluation s'appuiera sur tout ou partie des éléments suivants~:
+L'évaluation s'appuiera sur tout ou partie des éléments suivants :
 \begin{itemize}
 \item
   dossier ou rapport d'étude (compte rendu);
@@ -57,4 +57,4 @@ L'évaluation s'appuiera sur tout ou partie des éléments suivants~:
 }
 
 % Mots-clés
-\ajoutSmotscles{Mesures,  supports de transmission (fibre optique,  cuivre,  radio)}
+\ajoutSmotscles{Mesures, supports de transmission (fibre optique, cuivre, radio)}
