--- a/latex/saes/SAE14.tex
+++ b/latex/saes/SAE14.tex
@@ -42,7 +42,7 @@ en mesurant l'importance et la portée des contenus qu'il diffuse
 \ajoutSressources{R109}{Introduction aux technologies Web}
 \ajoutSressources{R110}{Anglais de communication et initiation au vocabulaire technique}
 \ajoutSressources{R111}{Expression-Culture-Communication Professionnelles 1}
-\ajoutSressources{R112}{PPP: Connaître son champ d'activité}
+\ajoutSressources{R112}{Projet Personnel et Professionnel}
 \ajoutSressources{R115}{Gestion de projet}
 
 % Livrable
@@ -59,4 +59,4 @@ en mesurant l'importance et la portée des contenus qu'il diffuse
 }
 
 % Mots-clés
-\ajoutSmotscles{Identité numérique,  site Web}
+\ajoutSmotscles{Identité numérique, site Web}
