--- a/latex/saes/SAE15.tex
+++ b/latex/saes/SAE15.tex
@@ -2,7 +2,7 @@
 % SAE
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\nouvellesae{SAÉ15}{Traitement de données}
+\nouvellesae{SAÉ15}{Traiter des données}
 
 \ajoutSheures{10}{8}{20}
 
@@ -58,4 +58,4 @@ et/ou Soutenance orale présentant le travail réalisé
 }
 
 % Mots-clés
-\ajoutSmotscles{Algorithmique,  programmation,  script}
+\ajoutSmotscles{Algorithmique, programmation, script}
