--- a/latex/saes/SAE21.tex
+++ b/latex/saes/SAE21.tex
@@ -38,6 +38,7 @@ fonctionnel et structuré.
 \ajoutSressources{R101}{Initiation aux réseaux informatiques}
 \ajoutSressources{R102}{Principes et architecture des réseaux}
 \ajoutSressources{R103}{Réseaux locaux et équipements actifs}
+\ajoutSressources{R108}{Bases des systèmes d'exploitation}
 \ajoutSressources{R108|}{None}
 \ajoutSressources{R201}{Technologie de l'Internet}
 \ajoutSressources{R202}{Administration système et fondamentaux de la virtualisation}
@@ -62,4 +63,4 @@ fonctionnel et structuré.
 }
 
 % Mots-clés
-\ajoutSmotscles{Adressage IP,  VLAN,  VTP,  routage inter-VLAN,  NAT,  PAT,  ACL,  DNS,  HTTP,  SSH,  routage (vecteur de distance / état de lien),  PXE,  TFTP}
+\ajoutSmotscles{Adressage IP, VLAN, VTP, routage inter-VLAN, NAT, PAT, ACL, DNS, HTTP, SSH, routage (vecteur de distance / état de lien), PXE, TFTP}
