--- a/latex/modeles/tableau_exemple.tex
+++ b/latex/modeles/tableau_exemple.tex
@@ -9,21 +9,19 @@
 \setlength{\tabcolsep}{0.125cm} % Marge des colonnes
 \setlength{\extrarowheight}{2pt} % Marge des lignes
 
+\xdef\exemplecode{\csname EScodeE\EXEMPLE\endcsname}
 % 1er tableau : Nom/Code/Semestre
 
 % 3ème tableau : descriptif
 \begin{tabular}[t]{|P|T|}
 \hline
 	{\bfseries Titre} &
-		{\bfseries \csname ESname\EXEMPLE\endcsname} \\
+	\multicolumn{1}{l|}{ \hypertarget{exemple:\exemplecode}{\bfseries \csname ESname\EXEMPLE\endcsname} }
+	\\
 \hline
 	\xdef\saecode{\csname EScode\EXEMPLE\endcsname}
 	{\bfseries Exemple de la \saecode} &
 		\hyperlink{sae:\saecode}{\csname ESsae\EXEMPLE\endcsname} \\
-
-\hline
-	{\bfseries Description} &
-	\tableauChampLong{\csname ESdescription\EXEMPLE\endcsname} \\
 \hline
 	{ \setlength{\extrarowheight}{0pt}
 	\begin{tabular}[t]{@{}P@{}}
@@ -33,6 +31,9 @@
 	\end{tabular}
 } &
 	\tableauChampLong{\csname ESproblematique\EXEMPLE\endcsname} \\
+\hline
+	{\bfseries Description} &
+	\tableauChampLong{\csname ESdescription\EXEMPLE\endcsname} \\
 \hline
 { \setlength{\extrarowheight}{0pt}
 	\begin{tabular}[t]{@{}P@{}}
