--- a/latex/pn_formation.tex
+++ b/latex/pn_formation.tex
@@ -1,6 +1,7 @@
 \documentclass[11pt,mathserif]{article} % mathserif
 
 %\usepackage[T1]{fontenc}
+% \usepackage{libertinust1math}
 \usepackage[LUC,T2A,T1]{fontenc}%
 %\usepackage[utf8x]{inputenc}%
 \usepackage[utf8]{inputenc}
@@ -11,7 +12,7 @@
 \usepackage{textcomp}
 \usepackage{colortbl}%
 \usepackage{etoolbox}
-\usepackage[french]{babel}
+\usepackage[francais]{babel}
 \usepackage{hyperref}
 \usepackage{array} % Pour les tableaux
 \usepackage{multicol}
@@ -19,8 +20,9 @@
 \usepackage{forloop}
 \usepackage{xparse}
 \usepackage{enumitem}
-\usepackage{longtable}
+% \usepackage{longtable}
 \usepackage{hyperref}
+\usepackage{amsmath} % pour les formules de maths
 
 \setlist{leftmargin=1em,topsep=0pt,partopsep=0pt,itemsep=0pt,itemindent=0em}
 
@@ -103,11 +105,11 @@
 \def\sem{A}
 
 \subsection{SAÉs du semestre 1}
-
+%
 \listeTitreSAE{\sem}
-
+%
 \subsection{Ressources du semestre 1}
-
+%
 \listeTitreRessource{\sem}
 
 \newpage
@@ -117,27 +119,27 @@
 
 % Les ressources du semestre 1
 \affichageRessource{\sem}
-
-%%%%%%%%%%%%%%%%
-%% SEMESTRE 2 %%
-%%%%%%%%%%%%%%%%
-\section{Semestre 2}
-\def\sem{B} % Le semestre 2
-
-\subsection{SAÉs du semestre 2}
-
-\listeTitreSAE{\sem}
-
-\subsection{Ressources du semestre 2}
-
-\listeTitreRessource{\sem}
-
-\newpage
-
-% Les SAE du semestre 2 + les exemples
-\affichageSAE{\sem}
-
-% Les ressources du semestre 2
-\affichageRessource{\sem}
+%
+%%%%%%%%%%%%%%%%%
+%%% SEMESTRE 2 %%
+%%%%%%%%%%%%%%%%%
+%\section{Semestre 2}
+%\def\sem{B} % Le semestre 2
+%
+%\subsection{SAÉs du semestre 2}
+%
+%\listeTitreSAE{\sem}
+%
+%\subsection{Ressources du semestre 2}
+%
+%\listeTitreRessource{\sem}
+%
+%\newpage
+%
+%% Les SAE du semestre 2 + les exemples
+%\affichageSAE{\sem}
+%
+%% Les ressources du semestre 2
+%\affichageRessource{\sem}
 
 \end{document}
