--- a/latex/ressources/R213.tex
+++ b/latex/ressources/R213.tex
@@ -22,6 +22,7 @@
 % Les SAE
 \ajoutRsae{SAÉ22}{Mesurer et caractériser un signal ou un système}
 \ajoutRsae{SAÉ23}{Mettre en place une solution informatique pour l’entreprise}
+\ajoutRsae{SAÉ24}{Projet intégratif de S2}
 
 % Les pre-requis
 
