--- a/latex/ressources/R214.tex
+++ b/latex/ressources/R214.tex
@@ -2,7 +2,7 @@
 % Ressources
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\nouvelleressource{R214}{Analyse des signaux}
+\nouvelleressource{R214}{Analyse mathématique des signaux}
 
 \ajoutRheures{30}{6}
 
@@ -21,9 +21,11 @@
 
 % Les SAE
 \ajoutRsae{SAÉ22}{Mesurer et caractériser un signal ou un système}
+\ajoutRsae{SAÉ24}{Projet intégratif de S2}
 
 % Les pre-requis
 \ajoutRprerequis{R113}{Mathématiques du signal}
+\ajoutRprerequis{R114}{Mathématiques des transmissions}
 
 % Le descriptif
 \ajoutRancrage{L'étude des signaux de transmission nécessite l'usage d'outils
