Résout le pb de police des maths

--- a/latex/modeles/affichages.tex
+++ b/latex/modeles/affichages.tex
@@ -15,7 +15,7 @@
         \xdef\saecode{\csname Scode\currentSAE\endcsname}
 	    \xdef\saenom{\csname Sname\currentSAE\endcsname}
         %\addtocontents{toc}{hihi} %\saecode : \saenom}
-        \addcontentsline{toc}{subsubsection}{SAÉ}
+        % \addcontentsline{toc}{subsubsection}{{\saenom}}
 
         \tableauSAE{\currentSAE}
 
