--- a/latex/ressources/R114.tex
+++ b/latex/ressources/R114.tex
@@ -44,11 +44,13 @@ lien avec l'électronique et les télécommunications.}
   Trigonométrie
   \begin{itemize}
     \item
-    formules , idem avec sinus
+    formules \(\cos(a\pm b)\), \(\cos(a)\cos(b)\), \(cos^2(a)\) ; même
+    formules avec sinus
   \item
     lien avec les vecteurs et le produit scalaire
   \item
     forme
+    \(a\cos(\omega_0 t)+b\sin(\omega_0 t) = A\cos(\omega_0 t +\phi)=A\cos(2\pi f_0 t+\phi)\)
   \item
     fonctions trigonométriques réciproques (en particulier arctangente)
   \end{itemize}
