--- a/latex/pn_formation.tex
+++ b/latex/pn_formation.tex
@@ -1,13 +1,14 @@
-\documentclass[11pt,mathserif]{article} % mathserif
+\documentclass[11pt]{article} % mathserif
 
 %\usepackage[T1]{fontenc}
 % \usepackage{libertinust1math}
 \usepackage[LUC,T2A,T1]{fontenc}%
 %\usepackage[utf8x]{inputenc}%
 \usepackage[utf8]{inputenc}
-\usepackage{arev}
+\usepackage{arevtext}
 \usepackage{tgtermes,tgadventor} % https://tug.org/FontCatalogue/seriffonts.html
 \usepackage[condensed]{tgheros}
+%\usepackage{cmbright}
 \usepackage{bookmark}
 \usepackage{textcomp}
 \usepackage{colortbl}%
